# Register

./: .gitignore  README.md  main.py  pyproject.toml
output/: chip_regs.h  chip_regs.html  chip_regs.json  chip_regs.md  chip_regs.v  chip_regs_ahb_wrapper.v  chip_regs_apb_wrapper.v  chip_regs_axi_wrapper.v  chip_regs_reg_block.sv  chip_regs_regfile_core.v
prompt/: prompt0.txt  prompt1.txt
src/: __init__.py  cli.py
src/generators/: __init__.py  ahb_wrapper_generator.py  apb_wrapper_generator.py  axi_wrapper_generator.py  c_header_generator.py  html_generator.py  json_generator.py  rtl_generator.py  uvm_generator.py
src/models/: register_bank.py
src/parser/: excel_parser.py
src/templates/: ahb_wrapper.v.j2  apb_wrapper.v.j2  axi_wrapper.v.j2  regfile_core.v.j2  uvm_reg_block.sv.j2
src/validators/: validator.py
tests/: test_ahb_wrapper_generator.py  test_apb_wrapper_generator.py  test_axi_wrapper_generator.py  test_c_header_generator.py  test_cli_entrypoints.py  test_html_generator.py  test_json_generator.py  test_packaging.py  test_parser.py  test_rtl_generator.py  test_uvm_generator.py  test_validator.py
