[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regpulse"
dynamic = ["version"]
description = "Generate synthesizable Verilog register banks and UVM RAL models from Excel specs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

keywords = ["verilog", "uvm", "register", "apb", "rtl", "ral", "eda", "hardware"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
regpulse = "src.cli:run"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
